--- a/src/app/sections/about-company-section/about-company-section.component.html
+++ b/src/app/sections/about-company-section/about-company-section.component.html
@@ -14,4 +14,29 @@
         </p>
     </div>
 
+    <!-- Other details block -->
+    <div class="w-full mt-10 flex justify-center gap-8 max-[750px]:flex-wrap">
+        <div class="w-60 py-3 flex justify-center gap-x-2 border border-fontSecondary">
+            <img width="40px" src="assets/img/document.png" alt="document image">
+            <div>
+                <h1 class="font-bold text-xl text-fontPrimary">3000</h1>
+                <p class="font-semibold text-[10px] text-fontSecondary uppercase">More than 3000 clients</p>
+            </div>
+        </div>
+        <div class="w-60 py-3 flex justify-center gap-x-2 border border-fontSecondary">
+            <img width="40px" src="assets/img/document.png" alt="document image">
+            <div>
+                <h1 class="font-bold text-xl text-fontPrimary">6</h1>
+                <p class="font-semibold text-[10px] text-fontSecondary uppercase">product guarantee 6 month</p>
+            </div>
+        </div>
+        <div class="w-60 py-3 flex justify-center gap-x-2 border border-fontSecondary">
+            <img width="40px" src="assets/img/document.png" alt="document image">
+            <div>
+                <h1 class="font-bold text-xl text-fontPrimary">10</h1>
+                <p class="font-semibold text-[10px] text-fontSecondary uppercase">More than 10 products</p>
+            </div>
+        </div>
+    </div>
+
 </div>
