--- a/src/app/sections/footer-section/footer-section.component.html
+++ b/src/app/sections/footer-section/footer-section.component.html
@@ -1,6 +1,6 @@
-<footer class="myContainer">
+<footer>
     <!-- Top block -->
-    <div class="px-16 pt-8 pb-16 flex flex-wrap gap-y-8 justify-between max-[700px]:px-4">
+    <div class="myContainer px-16 pt-8 pb-16 flex flex-wrap gap-y-8 justify-between max-[700px]:px-4">
 
         <!-- Logo -->
         <div class="w-1/4 h-fit flex gap-x-2 cursor-pointer max-[700px]:w-1/2">
@@ -68,20 +68,25 @@
     </div>
 
     <!-- Bottom block -->
-    <div class="px-16 py-4 bg-bgColor flex justify-between max-[700px]:px-4">
+    <div class="px-16 py-4 bg-bgColor max-[700px]:px-4">
 
-        <!-- Company text -->
-        <p class="w-fit text-sm text-fontSecondary">
-            © Realco by Minimal Square
-        </p>
+        <div class="myContainer flex justify-between">
 
-        <!-- Social medias -->
-        <ul class="flex gap-x-2">
-            <li><a href="#"><img src="assets/icons/facebook.svg" alt="facebook"></a></li>
-            <li><a href="#"><img src="assets/icons/instagram.svg" alt="instagram"></a></li>
-            <li><a href="#"><img src="assets/icons/twitter.svg" alt="twitter"></a></li>
-            <li><a href="#"><img src="assets/icons/linkedin.svg" alt="linkedin"></a></li>
-        </ul>
+            <!-- Company text -->
+            <p class="w-fit text-sm text-fontSecondary">
+                © Realco by Minimal Square
+            </p>
+
+            <!-- Social medias -->
+            <ul class="flex gap-x-2">
+                <li><a href="#"><img src="assets/icons/facebook.svg" alt="facebook"></a></li>
+                <li><a href="#"><img src="assets/icons/instagram.svg" alt="instagram"></a></li>
+                <li><a href="#"><img src="assets/icons/twitter.svg" alt="twitter"></a></li>
+                <li><a href="#"><img src="assets/icons/linkedin.svg" alt="linkedin"></a></li>
+            </ul>
+
+        </div>
 
     </div>
+
 </footer>
