--- a/src/app/sections/hero-section/hero-section.component.html
+++ b/src/app/sections/hero-section/hero-section.component.html
@@ -1,24 +1,26 @@
 <div 
   id="home" 
-  class="myContainer mt-16 flex max-[800px]:flex-wrap"
+  class="mt-16 flex bg-no-repeat max-[800px]:flex-wrap"
+  style="background-image: url('assets/img/edgeTop.png'); background-position: top left; background-size: 100px"
 >
     <!-- Left side - info section -->
     <div
-      class="w-1/2 bg-bgColor flex justify-around items-center bg-no-repeat max-[800px]:w-full" 
-      style="height: calc(100vh - 64px); background-image: url('assets/img/edgeTop.png'), url('assets/img/edgeBottom.png');background-position: 0 0, bottom right; background-size: 18%"
+      class="w-1/2 max-w-[650px] ml-auto flex justify-around items-center bg-no-repeat max-[800px]:w-full" 
+      style="height: calc(100vh - 64px); background-image: url('assets/img/edgeBottom.png'); background-position: bottom right; background-size: 100px"
     >
       <!-- Info block -->
       <div class="w-96 h-60 flex flex-col gap-4 max-[800px]:px-4 max-[800px]:h-fit">
         <p class="w-fit py-[2px] px-3 rounded-xl bg-[#E7E8E3] text-fontPrimary text-xs">
-            Ўзингизнинг орзуингиздаги жойни топинг
+          Ўзингизнинг орзуингиздаги жойни топинг
         </p>
         <h1 class="text-fontPrimary text-[44px] leading-[50px]">
-            Бир неча дақиқада оилангиз учун уй топинг
+          Бир неча дақиқада оилангиз учун уй топинг
         </h1>
         <p class="text-fontSecondary">
-            Aenean sodales mauris quis tellus facilisis, vel mattis magna. Interdum curabitur eget aliquam elit in mauris purus.
+          Aenean sodales mauris quis tellus facilisis, vel mattis magna. Interdum curabitur eget aliquam elit in mauris purus.
         </p>
       </div>
+
     </div>
 
     <!-- Right side - image section -->
