--- a/src/app/sections/contact-section/contact-section.component.html
+++ b/src/app/sections/contact-section/contact-section.component.html
@@ -7,10 +7,10 @@
         <!-- Info block -->
         <div class="w-fit h-fit m-auto mb-4 flex flex-col gap-4 text-center">
             <p class="w-fit py-[2px] px-3 rounded-xl bg-white text-fontPrimary text-xs max-[600px]:text-[10px] m-auto">
-                Find us
+                {{ 'sections.contactSection.findUs' | translate }}
             </p>
             <h1 class="text-white text-[44px] leading-[50px] font-bold max-[600px]:text-[32px]">
-                Contacts of Company
+                {{ 'sections.contactSection.contactCompany' | translate }}
             </h1>
         </div>
 
@@ -20,7 +20,7 @@
                 <div class="w-16 my-4 p-4 m-auto text-center bg-fontPrimary">
                     <img class="w-8 m-auto" src="assets/icons/phone.svg" alt="call icon">
                 </div>
-                <h2 class="font-bold text-xl text-center text-white">Call us</h2>
+                <h2 class="font-bold text-xl text-center text-white">{{ 'sections.contactSection.callUs' | translate }}</h2>
                 <p class="text-white text-center text-xs">+998 99 111 22 33</p>
             </div>
 
@@ -28,7 +28,7 @@
                 <div class="w-16 my-4 p-4 m-auto text-center bg-fontPrimary">
                     <img class="w-8 m-auto" src="assets/icons/mail.svg" alt="call icon">
                 </div>
-                <h2 class="font-bold text-xl text-center text-white">Send email</h2>
+                <h2 class="font-bold text-xl text-center text-white">{{ 'sections.contactSection.sendEmail' | translate }}</h2>
                 <p class="text-white text-center text-xs">some&#64;gmail.com</p>
             </div>
     
@@ -36,8 +36,8 @@
                 <div class="w-16 my-4 p-4 m-auto text-center bg-fontPrimary">
                     <img class="w-8 m-auto" src="assets/icons/location.svg" alt="call icon">
                 </div>
-                <h2 class="font-bold text-xl text-center text-white">Find us</h2>
-                <p class="text-white text-center text-xs">Tashkent city</p>
+                <h2 class="font-bold text-xl text-center text-white">{{ 'sections.contactSection.location' | translate }}</h2>
+                <p class="text-white text-center text-xs">Tashkent</p>
             </div>
         </div>
     
