--- a/src/app/sections/our-partners-section/our-partners-section.component.html
+++ b/src/app/sections/our-partners-section/our-partners-section.component.html
@@ -2,8 +2,12 @@
 
     <!-- Top - Info -->
     <div class="w-[650px] my-8 mx-auto max-[750px]:w-11/12 text-center">
-        <h1 class="text-fontPrimary text-[40px] font-bold mb-2">Our Partners</h1>
-        <p class="text-fontSecondary">Companies that trusted us, and supporting our company.</p>
+        <h1 class="text-fontPrimary text-[40px] font-bold mb-2">
+            {{ 'sections.ourPartners.ourPartners' | translate }}
+        </h1>
+        <p class="text-fontSecondary">
+            {{ 'sections.ourPartners.trustedCompanies' | translate }}
+        </p>
     </div>
 
     <!-- Partners Logo -->
