--- a/src/app/modules/product-detail/product-detail.component.html
+++ b/src/app/modules/product-detail/product-detail.component.html
@@ -68,7 +68,7 @@
                 }
             </div>
             <!-- Send button -->
-            <button (click)="onSendData()" class="w-fit m-auto mt-4 px-4 py-2 text-sm rounded-md text-white bg-btnColor">
+            <button (click)="onSendData(data)" class="w-fit m-auto mt-4 px-4 py-2 text-sm rounded-md text-white bg-btnColor">
                 {{ 'productDetail.sendNow' | translate }}
             </button>
         </div>
